// SPDX-License-Identifier: GPL-3.0

syntax = "proto3";
package apocryph.proto.v0.pricing;

option go_package = "github.com/comrade-coop/trusted-pods/pkg/proto";

message PricingTables {
  repeated PricingTable tables = 1;
}

message PricingTable {
  repeated PricedResource resources = 1;
  bytes paymentContractAddress = 2;
}

message PricedResource {
  string resource = 1;
  uint64 priceForReservation = 2;
  uint64 priceForUsage = 3;
  // uint64 priceForLimit = 4;

  // message MetricSource { string metricName = 1; enum Source { METRIC_SCHEDULER = 1; }; Source source = 2; }
}
